# jhook

./: CMakeLists.txt  LICENSE  Makefile  README.md  defines.h  dump.c  dump.h  helpers.c  helpers.h  hooks.c  hooks.h  inject  jhook.h  logger.c  logger.h  main.c  mappings.c  mappings.h  offsets.h  sigscan.c  sigscan.h  tempfile.c  tempfile.h
scripts/: inject
src/example/: main.c  test.java
